manifests/istio-service-WIP/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"50051":{}}}'
    cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
  name: helloworld-grpc
