manifests/istio-service-WIP/hellogrpc-virtualservice-ext.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hellogrpc-route-external
  namespace: hellogrpc
spec:
  gateways:
  - hellogrpc-gateway
  hosts: 
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: helloworld-grpc.hellogrpc.svc.cluster.local
        port:
          number: 50051
